// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom configs > should handle all props 1`] = `
"div {
  letter-spacing: .3125rem;
  word-spacing: .625rem;
  width: 6.25rem;
  height: 3.125rem;
  margin: 1rem;
  padding: .5rem;
  font-size: 1.5rem;
  line-height: 1.875rem;
}
"
`;

exports[`custom configs > should handle convert media queries 1`] = `
"@media (width >= 48rem) {
  .foo {
    margin: 16px;
    font-size: 1rem;
  }
}

@media (width >= 30rem) {
  .bar {
    margin: 12px;
    font-size: .75rem;
  }
}

#app {
  margin: 14px;
  font-size: .875rem;

  @media (width >= 37.5rem) {
    & .baz {
      margin: 18px;
      font-size: 1.125rem;
    }
  }
}
"
`;

exports[`custom configs > should handle custom configuration 1`] = `
"div {
  margin: 16px;
  font-size: 3rem;
}

.foo {
  word-spacing: 5px;
  padding: 8px;
  line-height: 3.75rem;
}
"
`;

exports[`custom configs > should handle custom ignoreSelectors 1`] = `
"div {
  letter-spacing: .3125rem;
  word-spacing: .625rem;
  width: 100px;
  height: 50px;
  margin: 16px;
  padding: 8px;
  font-size: 1.5rem;
  line-height: 1.875rem;
}

.foo {
  letter-spacing: 6px;
  word-spacing: 8px;
  width: 100px;
  height: 50px;
  margin: 15px;
  padding: 10px;
  font-size: 20px;
  line-height: 32px;
}

#app {
  letter-spacing: .25rem;
  word-spacing: .75rem;
  width: 100px;
  height: 50px;
  margin: 14px;
  padding: 9px;
  font-size: 1.375rem;
  line-height: 1.75rem;
}

#bar {
  letter-spacing: 7px;
  word-spacing: 9px;
  width: 100px;
  height: 50px;
  margin: 13px;
  padding: 7px;
  font-size: 26px;
  line-height: 26px;
}

body {
  letter-spacing: 8px;
  word-spacing: 7px;
  width: 100px;
  height: 50px;
  margin: 12px;
  padding: 6px;
  font-size: 28px;
  line-height: 24px;
}

.body {
  letter-spacing: .5625rem;
  word-spacing: .375rem;
  width: 100px;
  height: 50px;
  margin: 11px;
  padding: 5px;
  font-size: 1.875rem;
  line-height: 1.375rem;
}
"
`;

exports[`custom configs > should handle custom propList 1`] = `
"div {
  letter-spacing: 5px;
  word-spacing: 10px;
  width: 100px;
  height: 50px;
  margin: 1rem;
  padding: .5rem;
  font-size: 24px;
  line-height: 30px;
}
"
`;

exports[`custom configs > should handle minimum float value 1`] = `
"div {
  margin: .55px;
  font-size: .0344rem;
}

.foo {
  line-height: .25px;
  top: .25px;
}
"
`;

exports[`custom configs > should handle minimum negative value 1`] = `
"div {
  margin: -5px;
  font-size: -.625rem;
}

.foo {
  line-height: -40px;
  top: -20px;
}
"
`;

exports[`custom configs > should handle minimum positive value 1`] = `
"div {
  margin: 30px;
  font-size: 3.75rem;
}

.foo {
  padding: 8px;
  line-height: 1rem;
}
"
`;

exports[`custom configs > should handle minimum zero value 1`] = `
"div {
  margin: 0;
  font-size: 0;
}

.foo {
  padding: 10px;
  line-height: 1.25rem;
}

.bar {
  left: .25px;
}

.baz {
  top: -.55px;
}
"
`;

exports[`custom configs > should handle negation patterns 1`] = `
"div {
  letter-spacing: .3125rem;
  word-spacing: .625rem;
  background-position-y: 100px;
  width: 6.25rem;
  height: 3.125rem;
  margin: 1rem;
  padding: .5rem;
  font-size: 24px;
  line-height: 30px;
}
"
`;

exports[`custom configs > should handle pattern for props 1`] = `
"div {
  letter-spacing: 5px;
  word-spacing: 10px;
  background-position-y: 6.25rem;
  width: 100px;
  height: 50px;
  margin: 1rem 1.125rem 1.0625rem 1.1875rem;
  padding: .5rem .6875rem .5625rem .625rem;
  font-size: 24px;
  line-height: 30px;
}
"
`;

exports[`custom configs > should not convert media queries by default 1`] = `
"@media (width >= 768px) {
  .foo {
    margin: 16px;
    font-size: 1rem;
  }
}

@media (width >= 480px) {
  .bar {
    margin: 12px;
    font-size: .75rem;
  }
}

#app {
  margin: 14px;
  font-size: .875rem;

  @media (width >= 600px) {
    & .baz {
      margin: 18px;
      font-size: 1.125rem;
    }
  }
}
"
`;

exports[`custom configs > should use custom rootValue 1`] = `
"div {
  margin: 32px;
  font-size: 2rem;
}
"
`;

exports[`custom configs > should use custom unitPrecision 1`] = `
"div {
  font-size: 2.71rem;
}
"
`;
